--- a/Mercury/App.xaml
+++ b/Mercury/App.xaml
@@ -2,6 +2,7 @@
     x:Class="Mercury.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Mercury">
+    xmlns:local="using:Mercury"
+    RequestedTheme="Light">
 
 </Application>
