--- a/Mercury/MainPage.xaml
+++ b/Mercury/MainPage.xaml
@@ -29,12 +29,12 @@
 				<Border Grid.ColumnSpan="4" x:Name="VisitOverviewChart" MaxHeight="500">
 
 					<qc:SerialChart LegendVisibility="Collapsed"
-					                DataSource="{Binding FaceData}"
-					                CategoryValueMemberPath="Date"
+					                DataSource="{Binding Session.Chart}"
+					                CategoryValueMemberPath="Time"
 					                MinimumCategoryGridStep="100">
 						<qc:SerialChart.Graphs>
 							<qc:AreaGraph Title="Var1" ValueMemberPath="Var1" />
-							<qc:LineGraph Title="Page views" ValueMemberPath="Var3" />
+							<qc:LineGraph Title="Page views" ValueMemberPath="Var2" />
 						</qc:SerialChart.Graphs>
 					</qc:SerialChart>
 
@@ -46,10 +46,10 @@
 				        MinWidth="200">
 
 					<qc:SerialChart LegendVisibility="Collapsed"
-					                DataSource="{Binding RealTimeData}"
-					                CategoryValueMemberPath="Seconds">
+					                DataSource="{Binding Session.Chart}"
+					                CategoryValueMemberPath="Time">
 						<qc:SerialChart.Graphs>
-							<qc:ColumnGraph Title="Realtime visits" ValueMemberPath="Visits">
+							<qc:ColumnGraph Title="Realtime visits" ValueMemberPath="Var1">
 								<qc:ColumnGraph.Brush>
 									<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
 										<GradientStop Color="#FF1B956E" Offset="0" />
@@ -68,8 +68,8 @@
 				        MinWidth="200">
 
 					<qc:SerialChart LegendVisibility="Collapsed"
-					                DataSource="{Binding FaceData}"
-					                CategoryValueMemberPath="Date">
+					                DataSource="{Binding Session.Chart}"
+					                CategoryValueMemberPath="Time">
 						<qc:SerialChart.Graphs>
 							<qc:ColumnGraph Title="New visitors" ValueMemberPath="Var2" />
 						</qc:SerialChart.Graphs>
