--- a/Mercury/StatisticsPage.xaml
+++ b/Mercury/StatisticsPage.xaml
@@ -1,14 +1,143 @@
 ﻿<Page
-    x:Class="Mercury.StatisticsPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Mercury"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+	x:Class="Mercury.StatisticsPage"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:local="using:Mercury"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:quickCharts="using:Ailon.QuickCharts"
+	mc:Ignorable="d"
+	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
+	<Grid>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="1*" />
+			<ColumnDefinition Width="1*" />
+			<ColumnDefinition Width="1*" />
+			
+		</Grid.ColumnDefinitions>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="1*" />
+			<RowDefinition Height="1*" />
+			<RowDefinition Height="1*" />
+			<RowDefinition Height="1*" />
+		</Grid.RowDefinitions>
 
-    </Grid>
+		<TextBlock Text="Session Statistics" FontSize="50" HorizontalAlignment="Center" VerticalAlignment="Center" />
+		<ListView 
+			x:Name="SessionListView" 
+			Width="300" 
+			Grid.Column="0" 
+			Grid.Row="1" 
+			Grid.RowSpan="2" 
+			Margin="20" 
+			VerticalAlignment="Center" 
+			HorizontalAlignment="Center"
+			SelectionChanged="SessionListView_OnSelectionChanged"/>
+
+		<Button
+			Grid.Column="0"
+			Grid.Row="3"
+			Content="Back"
+			HorizontalAlignment="Center"
+			FontSize="40"
+			Width="300"
+			Click="Button_Back" />
+		
+		<quickCharts:SerialChart LegendVisibility="Visible"
+		                         DataSource="{Binding FaceData}"
+		                         CategoryValueMemberPath="Time"
+		                         MaxHeight="125"
+		                         Grid.Column="1"
+		                         Grid.Row="0"
+		                         Margin="5">
+			<quickCharts:SerialChart.Graphs>
+				<quickCharts:LineGraph x:Name="Anger" Title="Anger" ValueMemberPath="Anger" />
+			</quickCharts:SerialChart.Graphs>
+		</quickCharts:SerialChart>
+
+		<quickCharts:SerialChart LegendVisibility="Visible"
+		                         DataSource="{Binding FaceData}"
+		                         CategoryValueMemberPath="Time"
+		                         MaxHeight="125"
+		                         Grid.Column="1"
+		                         Grid.Row="1"
+		                         Margin="5">
+			<quickCharts:SerialChart.Graphs>
+				<quickCharts:LineGraph x:Name="Contempt" Title="Contempt" ValueMemberPath="Contempt" />
+			</quickCharts:SerialChart.Graphs>
+		</quickCharts:SerialChart>
+
+		<quickCharts:SerialChart LegendVisibility="Visible"
+		                         DataSource="{Binding FaceData}"
+		                         CategoryValueMemberPath="Time"
+		                         MaxHeight="125"
+		                         Grid.Column="1"
+		                         Grid.Row="2"
+		                         Margin="5">
+			<quickCharts:SerialChart.Graphs>
+				<quickCharts:LineGraph x:Name="Disgust" Title="Disgust" ValueMemberPath="Disgust" />
+			</quickCharts:SerialChart.Graphs>
+		</quickCharts:SerialChart>
+
+		<quickCharts:SerialChart LegendVisibility="Visible"
+		                         DataSource="{Binding FaceData}"
+		                         CategoryValueMemberPath="Time"
+		                         MaxHeight="125"
+		                         Grid.Column="1"
+		                         Grid.Row="3"
+		                         Margin="5">
+			<quickCharts:SerialChart.Graphs>
+				<quickCharts:LineGraph x:Name="Fear" Title="Fear" ValueMemberPath="Fear" />
+			</quickCharts:SerialChart.Graphs>
+		</quickCharts:SerialChart>
+
+		<quickCharts:SerialChart LegendVisibility="Visible"
+		                         DataSource="{Binding FaceData}"
+		                         CategoryValueMemberPath="Time"
+		                         MaxHeight="125"
+		                         Grid.Column="2"
+		                         Grid.Row="0"
+		                         Margin="5">
+			<quickCharts:SerialChart.Graphs>
+				<quickCharts:LineGraph x:Name="Happiness" Title="Happiness" ValueMemberPath="Happiness" />
+			</quickCharts:SerialChart.Graphs>
+		</quickCharts:SerialChart>
+
+		<quickCharts:SerialChart LegendVisibility="Visible"
+		                         DataSource="{Binding FaceData}"
+		                         CategoryValueMemberPath="Time"
+		                         MaxHeight="125"
+		                         Grid.Column="2"
+		                         Grid.Row="1"
+		                         Margin="5">
+			<quickCharts:SerialChart.Graphs>
+				<quickCharts:LineGraph x:Name="Neutral" Title="Neutral" ValueMemberPath="Neutral" />
+			</quickCharts:SerialChart.Graphs>
+		</quickCharts:SerialChart>
+
+		<quickCharts:SerialChart LegendVisibility="Visible"
+		                         DataSource="{Binding FaceData}"
+		                         CategoryValueMemberPath="Time"
+		                         MaxHeight="125"
+		                         Grid.Column="2"
+		                         Grid.Row="2"
+		                         Margin="5">
+			<quickCharts:SerialChart.Graphs>
+				<quickCharts:LineGraph x:Name="Sadness" Title="Sadness" ValueMemberPath="Sadness" />
+			</quickCharts:SerialChart.Graphs>
+		</quickCharts:SerialChart>
+
+		<quickCharts:SerialChart LegendVisibility="Visible"
+		                         DataSource="{Binding FaceData}"
+		                         CategoryValueMemberPath="Time"
+		                         MaxHeight="125"
+		                         Grid.Column="2"
+		                         Grid.Row="3"
+		                         Margin="5">
+			<quickCharts:SerialChart.Graphs>
+				<quickCharts:LineGraph x:Name="Surprise" Title="Surprise" ValueMemberPath="Surprise" />
+			</quickCharts:SerialChart.Graphs>
+		</quickCharts:SerialChart>
+	</Grid>
 </Page>
