--- a/Mercury/StatisticsPage.xaml
+++ b/Mercury/StatisticsPage.xaml
@@ -6,15 +6,17 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:quickCharts="using:Ailon.QuickCharts"
+	xmlns:api="using:API"
 	mc:Ignorable="d"
-	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+	Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+	Loaded="Page_Loaded">
 
 	<Grid>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="1*" />
 			<ColumnDefinition Width="1*" />
 			<ColumnDefinition Width="1*" />
-			
+
 		</Grid.ColumnDefinitions>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="1*" />
@@ -23,27 +25,53 @@
 			<RowDefinition Height="1*" />
 		</Grid.RowDefinitions>
 
-		<TextBlock Text="Session Statistics" FontSize="50" HorizontalAlignment="Center" VerticalAlignment="Center" />
-		<ListView 
-			x:Name="SessionListView" 
-			Width="300" 
-			Grid.Column="0" 
-			Grid.Row="1" 
-			Grid.RowSpan="2" 
-			Margin="20" 
-			VerticalAlignment="Center" 
+		<Border
+			Grid.Row="0"
+			Grid.RowSpan="3"
+			Margin="50"
 			HorizontalAlignment="Center"
-			SelectionChanged="SessionListView_OnSelectionChanged"/>
+			BorderThickness="2"
+			BorderBrush="Gray">
+			<ListView
+				x:Name="SessionListView"
+				ItemsSource="{x:Bind SelectedSessions}"
+				SelectionMode="Single"
+				SelectionChanged="SessionListView_OnSelectionChanged"
+				HorizontalAlignment="Center">
+
+				<ListView.HeaderTemplate>
+					<DataTemplate x:DataType="api:SavedSession">
+						<Border BorderThickness="0,0,0,2"
+						        BorderBrush="Gray">
+							<TextBlock Text="Sessions"
+							           FontSize="40"
+							           Margin="10"
+							           Width="300"
+							           HorizontalTextAlignment="Center"/>
+						</Border>
+					</DataTemplate>
+				</ListView.HeaderTemplate>
+
+				<ListView.ItemTemplate>
+					<DataTemplate x:DataType="api:SavedSession">
+						<TextBlock Text="{Binding TimeStamp}"
+								           Margin="10"
+										   FontSize="20"
+								           HorizontalTextAlignment="Center"/>
+					</DataTemplate>
+				</ListView.ItemTemplate>
+			</ListView>
+		</Border>
 
 		<Button
 			Grid.Column="0"
 			Grid.Row="3"
 			Content="Back"
 			HorizontalAlignment="Center"
-			FontSize="40"
+			FontSize="20"
 			Width="300"
 			Click="Button_Back" />
-		
+
 		<quickCharts:SerialChart LegendVisibility="Visible"
 		                         DataSource="{Binding FaceData}"
 		                         CategoryValueMemberPath="Time"
