--- a/Mercury/Pages/MainMenu.xaml
+++ b/Mercury/Pages/MainMenu.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="Mercury.MainMenu"
+    x:Class="Mercury.Pages.MainMenu"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Mercury"
