--- a/Mercury/Pages/RecordingPage.xaml
+++ b/Mercury/Pages/RecordingPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-	x:Class="Mercury.RecordingPage"
+	x:Class="Mercury.Pages.RecordingPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
