--- a/Mercury/Pages/StatisticsPage.xaml
+++ b/Mercury/Pages/StatisticsPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-	x:Class="Mercury.StatisticsPage"
+	x:Class="Mercury.Pages.StatisticsPage"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:local="using:Mercury"
